@@ -137,7 +137,7 @@ var CloudCmd, CloudFunc, ace;
                 initAce_f(data);
                 
                 /* removing keyBinding if set */
-                Key.unSet();
+                Key.unsetBind();
                             
                 Util.hidePanel();
                 Util.Images.hideLoad();
@@ -150,7 +150,7 @@ var CloudCmd, CloudFunc, ace;
     /* function hides Ace editor */
     AceEditor.hide                = (function() {
         var lElem = AceElement;
-        Key.set();
+        Key.setBind();
         
         if(lElem && FM)
             FM.removeChild(lElem);
@@ -166,9 +166,9 @@ var CloudCmd, CloudFunc, ace;
         this.Ace.show(pCurrentFile, pIsReadOnly);
         
         var key_event = function(pEvent){
-    
+            var lBinded = Key.get();
             /* если клавиши можно обрабатывать */
-            if( Key.get() ){
+            if( lBinded ){
                 /* if f4 or f3 pressed */
                 var lF3 = cloudcmd.KEY.F3;
                 var lF4 = cloudcmd.KEY.F4;
