@@ -47,20 +47,19 @@ var CloudCmd, Util, DOM;
     
     function KeyProto(){
         var Binded,
-            KEY         = CloudCmd.KEY,
             lTabPanel   = {
                 left        : 0,
                 right       : 0
                 
             };
         
-        this.get    = function(){return Binded;};
+        this.isBind     = function(){return Binded;};
         
-        this.set    = function(){Binded = true;};
+        this.setBind    = function(){Binded = true;};
         
-        this.unSet  = function(){Binded = false;};
+        this.unsetBind  = function(){Binded = false;};
         
-        this.init   = function(){
+        this.bind   = function(){
             DOM.Events.addKey(listener);
             
             /* клавиши назначены*/
@@ -70,6 +69,7 @@ var CloudCmd, Util, DOM;
         function listener(pEvent){
             /* получаем выдленный файл*/
             var i, n, lCurrent  = DOM.getCurrentFile(),
+                KEY             = CloudCmd.KEY,
                 lKeyCode        = pEvent.keyCode,
                 lShift          = pEvent.shiftKey,
                 lAlt            = pEvent.altKey,
