@@ -298,9 +298,10 @@ var CloudCmd, Util, DOM, CloudFunc, $;
                 lF10        = lKEY.F10,
                 lESC        = lKEY.ESC,
                 lKey        = pEvent.keyCode,
-                lShift      = pEvent.shiftKey;
-            /* если клавиши можно обрабатывать */
-            if( Key.get() ){
+                lShift      = pEvent.shiftKey,
+                lIsBind     = Key.isBind();
+            
+            if( lIsBind ){
                 if(lKey === lF10 && lShift){
                     $( DOM.getCurrentFile() ).contextMenu();
                     DOM.preventDefault(pEvent);
